Estructura Básica de la página web

--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-    
-    </body>
+<html>
+	<head>
+		<title>Invie- tus mejores guitarras!!</title>
+		<meta charset="UTF-8"/>
+	</head>
+	<body>
+		<header>   <!--header-->
+		<figure> <!--logotipo-->
+			<img/>
+		</figure>
+		<nav><!--menu-->
+			<ul>
+				<li>
+					<a>Home</a>
+				</li>
+				<li>
+					<a>Precios</a>
+				</li>
+			</ul>
+		</nav>
+		</header>
+		<section><!--portada -->
+			<h1>Guitarras Inviesibles</h1><!--Titulo-->
+			<h3>Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
+			<button>Conoce más</button><!--Boton-->
+		</section>
+		<section> <!--guitarras -->
+			<h2>Nuestras guitarras</h2><!--Titulo-->
+			<article>
+				<img/>
+				<h3>Indie acústica</h3>
+				<ol>
+					<li>Estilo vintage</li>
+					<li>Madera Pura</li>
+					<li>Incluye estuche invisible de aluminio</li>
+				</ol>
+			</article>
+			<article>
+				<img/>
+				<h3>Invie classic</h3>
+				<ol>
+					<li>Estilo vintage</li>
+					<li>Liviana</li>
+					<li>Inicia tu camino como rockstar</li>
+				</ol>
+			</article>
+			<!--Guitarra 1-->
+			<!--Guitarra 2-->
+		</section>
+	</body>
 </html>
