--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>   <!--header-->
 		<figure> <!--logotipo-->
-			<img/>
+			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
 		</figure>
 		<nav><!--menu-->
 			<ul>
@@ -28,8 +28,8 @@
 		<section> <!--guitarras -->
 			<h2>Nuestras guitarras</h2><!--Titulo-->
 			<article>
-				<img/>
-				<h3>Indie acústica</h3>
+				<img src="images/invie-acustica.png"width="200" alt="Guitarra Invie Acustica"/>
+				<h3>Indie acústica</h3><!--Guitarra 1-->
 				<ol>
 					<li>Estilo vintage</li>
 					<li>Madera Pura</li>
@@ -37,16 +37,14 @@
 				</ol>
 			</article>
 			<article>
-				<img/>
-				<h3>Invie classic</h3>
+				<img src="images/invie-classic.png" width="" alt="Guitarra Invie Classic"/>
+				<h3>Invie classic</h3><!--Guitarra 2-->
 				<ol>
 					<li>Estilo vintage</li>
 					<li>Liviana</li>
 					<li>Inicia tu camino como rockstar</li>
 				</ol>
-			</article>
-			<!--Guitarra 1-->
-			<!--Guitarra 2-->
+			</article>	
 		</section>
 	</body>
 </html>
