Navegación interna agregada

--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
 		<meta charset="UTF-8"/>
 	</head>
 	<body>
-		<header>   <!--header-->
+		<headeri id="header">   <!--header-->
 		<figure> <!--logotipo-->
 			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
 		</figure>
 		<nav><!--menu-->
 			<ul>
 				<li>
-					<a>Home</a>
+					<a href="index.html">Home</a>
+				</li>
+        <li>
+					<a href="#guitarras">Guitarras</a>
 				</li>
 				<li>
-					<a>Precios</a>
+					<a href="precios.html">Precios</a>
 				</li>
 			</ul>
 		</nav>
 		</header>
-		<section><!--portada -->
+		<section id="portada"><!--portada -->
 			<h1>Guitarras Inviesibles</h1><!--Titulo-->
 			<h3>Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
 			<button>Conoce más</button><!--Boton-->
 		</section>
-		<section> <!--guitarras -->
+		<section id="guitarras"> <!--guitarras -->
 			<h2>Nuestras guitarras</h2><!--Titulo-->
 			<article>
 				<img src="images/invie-acustica.png"width="200" alt="Guitarra Invie Acustica"/>
