Se agregaron clases a los elementos HTML

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<title>Invie- tus mejores guitarras!!</title>
 		<meta charset="UTF-8"/>
+    <link rel="stylesheet" href="css/invie.css"/>
 	</head>
 	<body>
-		<headeri id="header">   <!--header-->
-		<figure> <!--logotipo-->
+		<header id="header" class="header" >   <!--header-->
+		<figure class="logotipo"> <!--logotipo-->
 			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
 		</figure>
-		<nav><!--menu-->
+		<nav class="menu"><!--menu-->
 			<ul>
 				<li>
 					<a href="index.html">Home</a>
@@ -23,16 +24,16 @@
 			</ul>
 		</nav>
 		</header>
-		<section id="portada"><!--portada -->
-			<h1>Guitarras Inviesibles</h1><!--Titulo-->
-			<h3>Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
+		<section id="portada" class="portada"><!--portada -->
+			<h1 class="titulo">Guitarras Inviesibles</h1><!--Titulo-->
+			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
 			<button>Conoce más</button><!--Boton-->
 		</section>
-		<section id="guitarras"> <!--guitarras -->
+		<section id="guitarras" class="guitarras"> <!--guitarras -->
 			<h2>Nuestras guitarras</h2><!--Titulo-->
 			<article>
 				<img src="images/invie-acustica.png"width="200" alt="Guitarra Invie Acustica"/>
-				<h3>Indie acústica</h3><!--Guitarra 1-->
+				<h3 class="title-b"class="guitarra">Indie acústica</h3><!--Guitarra 1-->
 				<ol>
 					<li>Estilo vintage</li>
 					<li>Madera Pura</li>
@@ -41,7 +42,7 @@
 			</article>
 			<article>
 				<img src="images/invie-classic.png" width="" alt="Guitarra Invie Classic"/>
-				<h3>Invie classic</h3><!--Guitarra 2-->
+				<h3 class="title-b" class="guitarras">Invie classic</h3><!--Guitarra 2-->
 				<ol>
 					<li>Estilo vintage</li>
 					<li>Liviana</li>
