--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Invie- tus mejores guitarras!!</title>
 		<meta charset="UTF-8"/>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Allerta" rel="stylesheet">
     <link rel="stylesheet" href="css/invie.css"/>
 	</head>
 	<body>
