Cambia márgenes y padding.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/invie.css"/>
 	</head>
 	<body>
-		<header id="header" class="header" >   <!--header-->
+		<header id="header" class="header contenedor" >   <!--header-->
 		<figure class="logotipo"> <!--logotipo-->
 			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
 		</figure>
@@ -27,11 +27,13 @@
 		</nav>
 		</header>
 		<section id="portada" class="portada"><!--portada -->
-			<h1 class="titulo">Guitarras Inviesibles</h1><!--Titulo-->
-			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
-			<button>Conoce más</button><!--Boton-->
+      <div class="contenedor">
+        <h1 class="titulo">Guitarras Inviesibles</h1><!--Titulo-->
+        <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
+        <button>Conoce más</button><!--Boton-->
+      </div>
 		</section>
-		<section id="guitarras" class="guitarras"> <!--guitarras -->
+		<section id="guitarras" class="guitarras contenedor"> <!--guitarras -->
 			<h2>Nuestras guitarras</h2><!--Titulo-->
 			<article>
 				<img src="images/invie-acustica.png"width="200" alt="Guitarra Invie Acustica"/>
