--- a/index.html
+++ b/index.html
@@ -36,22 +36,26 @@
 		<section id="guitarras" class="guitarras contenedor"> <!--guitarras -->
 			<h2>Nuestras guitarras</h2><!--Titulo-->
 			<article>
-				<img src="images/invie-acustica.png"width="200" alt="Guitarra Invie Acustica"/>
-				<h3 class="title-b"class="guitarra">Indie acústica</h3><!--Guitarra 1-->
-				<ol>
-					<li>Estilo vintage</li>
-					<li>Madera Pura</li>
-					<li>Incluye estuche invisible de aluminio</li>
-				</ol>
+				<img class="right" src="images/invie-acustica.png"width="350" alt="Guitarra Invie Acustica"/>
+        <div class="contenedor-guitarra-a">
+          <h3 class="title-b" class="guitarra">Indie acústica</h3><!--Guitarra 1-->
+          <ol>
+            <li>Estilo vintage</li>
+            <li>Madera Pura</li>
+            <li>Incluye estuche invisible de aluminio</li>
+          </ol>
+        </div>
 			</article>
 			<article>
-				<img src="images/invie-classic.png" width="" alt="Guitarra Invie Classic"/>
-				<h3 class="title-b" class="guitarras">Invie classic</h3><!--Guitarra 2-->
-				<ol>
-					<li>Estilo vintage</li>
-					<li>Liviana</li>
-					<li>Inicia tu camino como rockstar</li>
-				</ol>
+				<img class="left" src="images/invie-classic.png" width="350" alt="Guitarra Invie Classic"/>
+        <div class="contenedor-guitarra-b">
+          <h3 class="title-b" class="guitarra">Invie classic</h3><!--Guitarra 2-->
+          <ol>
+            <li>Estilo vintage</li>
+            <li>Liviana</li>
+            <li>Inicia tu camino como rockstar</li>
+          </ol>
+        </div>
 			</article>	
 		</section>
 	</body>
