--- a/index.html
+++ b/index.html
@@ -1,62 +1,102 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Invie- tus mejores guitarras!!</title>
-		<meta charset="UTF-8"/>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Allerta" rel="stylesheet">
+  <head>
+    <title>Invie - tus mejores guitarras!!</title>
+    <meta charset="utf-8"/>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/invie.css"/>
-	</head>
-	<body>
-		<header id="header" class="header contenedor" >   <!--header-->
-		<figure class="logotipo"> <!--logotipo-->
-			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
-		</figure>
-		<nav class="menu"><!--menu-->
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-        <li>
-					<a href="#guitarras">Guitarras</a>
-				</li>
-				<li>
-					<a href="precios.html">Precios</a>
-				</li>
-			</ul>
-		</nav>
-		</header>
-		<section id="portada" class="portada"><!--portada -->
+  </head>
+  <body>
+    <header id="header" class="header contenedor"> <!-- header -->
+      <figure class="logotipo"> <!-- logotipo -->
+        <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
+      </figure>
+      <nav class="menu"> <!-- menu -->
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="#guitarras">Guitarras</a>
+          </li>
+          <li>
+            <a href="precios.html">Precios</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section id="portada" class="portada "> <!-- portada -->
       <div class="contenedor">
-        <h1 class="titulo">Guitarras Inviesibles</h1><!--Titulo-->
-        <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!--Resumen-->
-        <button>Conoce más</button><!--Boton-->
+        <h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+        <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+        <button>Conoce mas</button><!-- boton -->
       </div>
-		</section>
-		<section id="guitarras" class="guitarras contenedor"> <!--guitarras -->
-			<h2>Nuestras guitarras</h2><!--Titulo-->
-			<article>
-				<img class="right" src="images/invie-acustica.png"width="350" alt="Guitarra Invie Acustica"/>
+    </section>
+    <section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
+      <h2>Nuestra guitarras</h2><!-- titulo -->
+      <article class="guitarra"> <!-- guitarra 1 -->
+        <img class="derecha" src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350"/>
         <div class="contenedor-guitarra-a">
-          <h3 class="title-b" class="guitarra">Indie acústica</h3><!--Guitarra 1-->
+          <h3 class="title-b">Invie Acustica</h3>
           <ol>
             <li>Estilo vintage</li>
-            <li>Madera Pura</li>
+            <li>Madera pura</li>
             <li>Incluye estuche invisible de aluminio</li>
           </ol>
         </div>
-			</article>
-			<article>
-				<img class="left" src="images/invie-classic.png" width="350" alt="Guitarra Invie Classic"/>
+      </article>
+      <article class="guitarra"> <!-- guitarra 2 -->
+        <img class="izquierda" src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350"/>
         <div class="contenedor-guitarra-b">
-          <h3 class="title-b" class="guitarra">Invie classic</h3><!--Guitarra 2-->
+          <h3 class="title-b">Invie Classic</h3>
           <ol>
             <li>Estilo vintage</li>
             <li>Liviana</li>
-            <li>Inicia tu camino como rockstar</li>
+            <li>Inicia tu camino como Rockstar</li>
           </ol>
         </div>
-			</article>	
-		</section>
-	</body>
+      </article>
+    </section>
+    <footer class="footer">
+      <div class="contenedor">
+        <div class="contacto">
+          <img src="images/invie-white.png" alt="logotipo blanco"/>
+          <a href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
+          <a href="mailto:contacto@invie.com"><strong>E-mail</strong> <span>contacto@invie.com</span></a>
+        </div>
+        <form class="formulario">
+          <label for="nombre">Nombre</label>
+          <input type="text" required id="nombre" name="name"/>
+           <label for="email">E-mail</label>
+          <input type="email" required id="email" name="email"/>
+          <div class="sexo">
+            <label for="mujer">
+              <input type="radio" id="mujer" name="sexo" value="mujer"/> Mujer
+            </label>
+            <label for="hombre">
+              <input type="radio" id="hombre" name="sexo" value="hombre"/> Hombre
+            </label>
+          </div>
+          <div class="intereses">
+            <label for="cotizacion">
+              <input type="checkbox" id="cotizacion" name="intereses" value="cotizacion"/>Cotización
+            </label>
+            <label for="reclamos">
+              <input type="checkbox" id="reclamos" name="intereses" value="reclamos"/>Reclamos
+            </label>
+            <label for="comentarios">
+              <input type="checkbox" id="comentarios" name="intereses" value="comentarios"/>Comentarios
+            </label>
+            <label for="otros">
+              <input type="checkbox" id="otros" name="intereses" value="otros"/>Otros
+            </label>
+          </div>
+          <div>
+            <label for="comentarios">Comentarios</label>
+            <textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+            <input type="submit" value="Enviar"/>
+          </div>
+      </div>
+    </footer> 
+  </body>
 </html>
