--- a/precios.html
+++ b/precios.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="css/invie.css"/>
   </head>
   <body>
-    <header id="header" class="header contenedor"> <!-- header -->
-      <figure class="logotipo"> <!-- logotipo -->
-        <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
-      </figure>
-      <nav class="menu"> <!-- menu -->
-        <ul>
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="index.html#guitarras">Guitarras</a>
-          </li>
-          <li>
-            <a href="precios.html">Precios</a>
-          </li>
-        </ul>
-      </nav>
+    <header id="header" class="header background"> <!-- header -->
+      <div class="contenedor">
+        <figure class="logotipo"> <!-- logotipo -->
+          <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
+        </figure>
+        <nav class="menu"> <!-- menu -->
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="index.html#guitarras">Guitarras</a>
+            </li>
+            <li>
+              <a href="precios.html">Precios</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <section class="tabla">
       <div class="contenedor">
